--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 GILESTHER PREPARATORY SCHOOL
             </h1>
             <div class="w-48 h-48 md:w-64 md:h-64 mx-auto mb-8 bg-white rounded-full shadow-2xl p-6 animate-slide">
-                <img src="C:\Users\Administrator\Pictures\logo.jpg" alt="School Logo"
+                <img src="C:\Users\Administrator\Pictures\logo" alt="School Logo"
                     class="w-full h-full object-contain rounded-full border-8 border-gold/30">
             </div>
             <p class="text-2xl md:text-3xl font-medium mb-4">Wiyumiririe • Along Nyahururu–Nyeri Road</p>
@@ -160,7 +160,7 @@
                     <div class="bg-gradient-to-br from-primary to-secondary rounded-3xl p-2 shadow-2xl">
                         <div
                             class="bg-gray-200 border-4 border-dashed rounded-3xl w-full h-96 flex items-center justify-center">
-                            <img src="C:\Users\Administrator\Pictures\gil.jpg" alt="School Photo"
+                            <img src="https://github.com/simalaX/school-website/blob/main/gil.jpg alt"="School Photo"
                                 class="mx-auto rounded-3xl shadow-2xl object-cover w-full h-full">
                         </div>
                     </div>
