--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 GILESTHER PREPARATORY SCHOOL
             </h1>
             <div class="w-48 h-48 md:w-64 md:h-64 mx-auto mb-8 bg-white rounded-full shadow-2xl p-6 animate-slide">
-                <img src="C:\Users\Administrator\Pictures\logo" alt="School Logo"
+                <img src=" https://github.com/simalaX/school-website/blob/main/logo.jpg" alt="School Logo"
                     class="w-full h-full object-contain rounded-full border-8 border-gold/30">
             </div>
             <p class="text-2xl md:text-3xl font-medium mb-4">Wiyumiririe • Along Nyahururu–Nyeri Road</p>
