--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="bg-gradient-to-br from-primary to-secondary rounded-3xl p-2 shadow-2xl">
                         <div
                             class="bg-gray-200 border-4 border-dashed rounded-3xl w-full h-96 flex items-center justify-center">
-                            <img src="https://github.com/simalaX/school-website/blob/main/gil.jpg alt"="School Photo"
+                            <img src=" https://github.com/simalaX/school-website/blob/main/gil.jpg" alt="School Photo"
                                 class="mx-auto rounded-3xl shadow-2xl object-cover w-full h-full">
                         </div>
                     </div>
