--- a/index.html
+++ b/index.html
@@ -289,6 +289,14 @@
                     class="text-3xl hover:text-gold transition transform hover:scale-125">
                     <i class="fab fa-x-twitter"></i>
                 </a>
+<!-- WhatsApp Button -->
+                <a href="https://wa.me/254717792672" target="_blank"
+                    class="flex items-center space-x-3 bg-green-500 text-white px-7 py-4 rounded-full text-lg font-bold hover:bg-green-600 transition transform hover:scale-110 shadow-2xl">
+                    <i class="fab fa-whatsapp text-3xl"></i>
+                    <span class="hidden sm:inline">+254 717 792 672</span>
+                </a>
+
+
             </div>
 
             <p class="text-3xl font-heading font-bold text-gold">"Hard Work Pays"</p>
