Updated project image and code

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 GILESTHER PREPARATORY SCHOOL
             </h1>
             <div class="w-48 h-48 md:w-64 md:h-64 mx-auto mb-8 bg-white rounded-full shadow-2xl p-6 animate-slide">
-                <img src="C:\Users\Administrator\Pictures\logo.jpg" alt="School Logo"
+                <img src="  https://raw.githubusercontent.com/simalaX/school-website/main/logo.jpg" alt="School Logo"
                     class="w-full h-full object-contain rounded-full border-8 border-gold/30">
             </div>
             <p class="text-2xl md:text-3xl font-medium mb-4">Wiyumiririe • Along Nyahururu–Nyeri Road</p>
@@ -145,7 +145,7 @@
                 <div class="space-y-8 text-lg leading-relaxed">
                     <p class="text-xl">
                         Gilesther Preparatory School is located
-                        in <strong>Wiyumiririe</strong>, along the Nyahururu–Nyeri Road, Nyandarua County.
+                        in <strong>Wiyumiririe</strong>, along the Nyahururu–Nyeri Road, Laikipia County.
                     </p>
                     <p class="text-xl">
                         We deliver the full <strong>Competency-Based Curriculum (CBC)</strong> from Early Childhood
@@ -160,8 +160,8 @@
                     <div class="bg-gradient-to-br from-primary to-secondary rounded-3xl p-2 shadow-2xl">
                         <div
                             class="bg-gray-200 border-4 border-dashed rounded-3xl w-full h-96 flex items-center justify-center">
-                            <img src="C:\Users\Administrator\Pictures\gil.jpg" alt="School Photo"
-                                class="mx-auto rounded-3xl shadow-2xl object-cover w-full h-full">
+                            <img src=" https://raw.githubusercontent.com/simalaX/school-website/main/gil.jpg "
+                                alt="School Photo" class="mx-auto rounded-3xl shadow-2xl object-cover w-full h-full">
                         </div>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
             <div class="grid md:grid-cols-3 gap-12 max-w-6xl mx-auto">
                 <div class="bg-white p-12 rounded-3xl shadow-2xl border-t-8 border-primary">
                     <h3 class="text-3xl font-heading font-bold text-primary mb-6">Location</h3>
-                    <p class="text-xl leading-relaxed">Wiyumiririe<br>Along Nyahururu–Nyeri Road<br>Nyandarua County,
+                    <p class="text-xl leading-relaxed">Wiyumiririe<br>Along Nyahururu–Nyeri Road<br>Laikipia County,
                         Kenya</p>
                 </div>
                 <div class="bg-white p-12 rounded-3xl shadow-2xl border-t-8 border-secondary">
@@ -268,7 +268,7 @@
     <!-- Footer with Social Media Links -->
     <footer class="bg-primary text-white py-14 text-center">
         <div class="container mx-auto px-6">
-            <p class="text-xl font-medium mb-8">&copy; 2025 Gilesther Preparatory School • Wiyumiririe, Nyandarua County
+            <p class="text-xl font-medium mb-8">&copy; 2025 Gilesther Preparatory School • Wiyumiririe, Laikipia County
             </p>
 
             <!-- Social Media Icons -->
@@ -289,6 +289,14 @@
                     class="text-3xl hover:text-gold transition transform hover:scale-125">
                     <i class="fab fa-x-twitter"></i>
                 </a>
+                <!-- WhatsApp Button -->
+                <a href="https://wa.me/254717792672" target="_blank"
+                    class="flex items-center space-x-3 bg-green-500 text-white px-7 py-4 rounded-full text-lg font-bold hover:bg-green-600 transition transform hover:scale-110 shadow-2xl">
+                    <i class="fab fa-whatsapp text-3xl"></i>
+                    <span class="hidden sm:inline">+254 717 792 672</span>
+                </a>
+
+
             </div>
 
             <p class="text-3xl font-heading font-bold text-gold">"Hard Work Pays"</p>
