--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 GILESTHER PREPARATORY SCHOOL
             </h1>
             <div class="w-48 h-48 md:w-64 md:h-64 mx-auto mb-8 bg-white rounded-full shadow-2xl p-6 animate-slide">
-                <img src="  https://raw.githubusercontent.com/simalaX/school-website/blob/main/log.jpg " alt="School Logo"
+                <img src="  https://raw.githubusercontent.com/simalaX/school-website/main/logo.jpg" alt="School Logo"
                     class="w-full h-full object-contain rounded-full border-8 border-gold/30">
             </div>
             <p class="text-2xl md:text-3xl font-medium mb-4">Wiyumiririe • Along Nyahururu–Nyeri Road</p>
@@ -160,13 +160,10 @@
                     <div class="bg-gradient-to-br from-primary to-secondary rounded-3xl p-2 shadow-2xl">
                         <div
                             class="bg-gray-200 border-4 border-dashed rounded-3xl w-full h-96 flex items-center justify-center">
-<<<<<<< HEAD
+
                             <img src=" https://raw.githubusercontent.com/simalaX/school-website/main/gil.jpg "
                                 alt="School Photo" class="mx-auto rounded-3xl shadow-2xl object-cover w-full h-full">
-=======
-                            <img src=" https://raw.githubusercontent.com/simalaX/school-website/main/gil.jpg " alt="School Photo"
-                                class="mx-auto rounded-3xl shadow-2xl object-cover w-full h-full">
->>>>>>> d51d3af5148ae79899ec4dedcc36d23ec9aeeb1f
+
                         </div>
                     </div>
                 </div>
@@ -218,7 +215,7 @@
         <div class="container mx-auto px-6 text-center max-w-5xl relative z-10">
             <h2 class="text-5xl md:text-7xl font-heading font-bold mb-10">Enrollment is Ongoing!</h2>
             <p class="text-2xl md:text-3xl mb-12 opacity-95">
-                Secure your child’s future today — from ECDE to Grade 9
+                Secure your child's future today — from ECDE to Grade 9
             </p>
             <div class="bg-white/10 backdrop-blur-lg rounded-3xl p-16 shadow-2xl border border-white/30">
                 <p class="text-3xl font-bold mb-8">Contact us for admission inquiries</p>
@@ -294,18 +291,12 @@
                     class="text-3xl hover:text-gold transition transform hover:scale-125">
                     <i class="fab fa-x-twitter"></i>
                 </a>
-<<<<<<< HEAD
                 <!-- WhatsApp Button -->
-=======
-<!-- WhatsApp Button -->
->>>>>>> d51d3af5148ae79899ec4dedcc36d23ec9aeeb1f
                 <a href="https://wa.me/254717792672" target="_blank"
                     class="flex items-center space-x-3 bg-green-500 text-white px-7 py-4 rounded-full text-lg font-bold hover:bg-green-600 transition transform hover:scale-110 shadow-2xl">
                     <i class="fab fa-whatsapp text-3xl"></i>
                     <span class="hidden sm:inline">+254 717 792 672</span>
                 </a>
-
-
             </div>
 
             <p class="text-3xl font-heading font-bold text-gold">"Hard Work Pays"</p>
