--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="space-y-8 text-lg leading-relaxed">
                     <p class="text-xl">
                         Gilesther Preparatory School is located
-                        in <strong>Wiyumiririe</strong>, along the Nyahururu–Nyeri Road, Nyandarua County.
+                        in <strong>Wiyumiririe</strong>, along the Nyahururu–Nyeri Road, Laikipia County.
                     </p>
                     <p class="text-xl">
                         We deliver the full <strong>Competency-Based Curriculum (CBC)</strong> from Early Childhood
