--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
                 GILESTHER PREPARATORY SCHOOL
             </h1>
             <div class="w-48 h-48 md:w-64 md:h-64 mx-auto mb-8 bg-white rounded-full shadow-2xl p-6 animate-slide">
-                <img src="  https://raw.githubusercontent.com/simalaX/school-website/main/logo.jpg" alt="School Logo"
-                    class="w-full h-full object-contain rounded-full border-8 border-gold/30">
+                <img src="https://raw.githubusercontent.com/simalaX/school-website/main/log.jpg"
+     alt="School Logo"
+     class="w-full h-full object-contain rounded-full border-8 border-gold/30">
             </div>
             <p class="text-2xl md:text-3xl font-medium mb-4">Wiyumiririe • Along Nyahururu–Nyeri Road</p>
             <p class="text-xl md:text-2xl mb-10 opacity-90">
