--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
     <nav>
         <div class="container">
             <a href="#home" class="logo-wrapper">
-                <img src="https://raw.githubusercontent.com/simalaX/school-website/main/log.jpg" alt="Gilesther Logo">
-                <span class="logo heading">Gilesther Preparatory</span>
+                <img src="https://raw.githubusercontent.com/simalaX/school-website/main/log.jpg" alt="Gilesther Log">
+                <span class="log heading">Gilesther Preparatory</span>
             </a>
             <div class="links">
                 <a href="#home">Home</a>
@@ -501,8 +501,8 @@
     <section id="home">
         <div>
             <h1 class="heading">GILESTHER PREPARATORY SCHOOL</h1>
-            <div class="logo-img">
-                <img src="https://raw.githubusercontent.com/simalaX/school-website/main/logo.jpg" alt="School Logo">
+            <div class="log-img">
+                <img src="https://raw.githubusercontent.com/simalaX/school-website/main/log.jpg" alt="School Log">
             </div>
             <p style="font-size:1.5rem;margin-bottom:1rem">Wiyumiririe • Along Nyahururu–Nyeri Road</p>
             <p style="font-size:1.2rem;margin-bottom:2rem">Quality Education from <strong>ECDE to Grade 9</strong></p>
